# decoui

./: .gitignore  LICENSE  README.md  history.db  icon.psd  pyproject.toml
.claude/: settings.local.json
docs/: design.md  pypi_publish.md
src/decoui/: __init__.py  decorators.py  example.py  example_main.py  registry.py  runner.py  types.py  widget_builder.py
src/decoui/engine/: __init__.py  executor.py  worker.py
src/decoui/storage/: __init__.py  db.py  models.py
src/decoui/ui/: history_page.py  log_window.py  main_window.py  nav_tree.py  tag_bar.py  tool_page.py
